# usv-ais-evasion

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sample_nmea.txt
data/results/: being_overtaken_stand_on_nmea_summary.json  close_crossing_starboard_risk_nmea_summary.json  crossing_port_risk_nmea_summary.json  crossing_scenario_nmea_summary.json  crossing_starboard_risk_nmea_summary.json  head_on_risk_nmea_summary.json  late_crossing_starboard_risk_nmea_summary.json  overtaking_ownship_give_way_nmea_summary.json  parallel_no_risk_nmea_summary.json
data/scenarios/: being_overtaken_stand_on_nmea.txt  close_crossing_starboard_risk_nmea.txt  crossing_port_risk_nmea.txt  crossing_scenario_nmea.txt  crossing_starboard_risk_nmea.txt  head_on_risk_nmea.txt  late_crossing_starboard_risk_nmea.txt  overtaking_ownship_give_way_nmea.txt  parallel_no_risk_nmea.txt  scenario_manifest.json
docs/: escenarios_canónicos.md  evaluation_methodology.md
src/usv_avoidance/: ais_adapter.py  ais_type1_generator.py  avoidance.py  batch_simulation.py  cpa_tcpa.py  encounter_classifier.py  encounter_geometry.py  evaluation_report.py  generate_representative_scenarios.py  main.py  motion_model.py  nmea_file_source.py  nmea_serial_source.py  route_manager.py  scenario_config.py  simulation_metrics.py  simulation_runner.py  state_machine.py  target_tracker.py  visualizer.py  visualizer_ais.py  web_app.py
src/usv_avoidance/web_interface/: app.py
tesis/: pyvenv.cfg
tesis/Scripts/: activate  activate.bat
tests/: test_encounter_classifier.py  test_encounter_geometry.py
(+6 files in other folders)
